Logging filtering done. Search started

--- a/kraken.cfg
+++ b/kraken.cfg
@@ -10,3 +10,4 @@ RECURSIVE           = YES
 PDF_HYPERLINKS      = YES
 USE_PDFLATEX        = YES
 HAVE_DOT            = YES
+ALIASES += "error=\xrefitem my_errors \"\" \"\"" 
